# pedalsky

./: .gitignore  Cargo.toml  PHASE6_CONTINUATION_PROMPT.txt  Pedalsky corrected implementation plan.md  README.md  pedalsky.toml
crates/ps-app/: Cargo.toml
crates/ps-app/examples/: dump_exr_centre.rs  generate_mountain_wave.rs  generate_type_split.rs
crates/ps-app/src/: headless_dump.rs  lib.rs  main.rs  main_helpers.rs  probe.rs  render_cli.rs  test_harness.rs
crates/ps-app/tests/: golden.rs  integration.rs  phase10_ui.rs  phase11_scenes.rs  phase5_lut_diag.rs  phase5_sky.rs  phase6_clouds.rs  phase6_noise_diag.rs  phase7_ground.rs  phase8_precip.rs  phase9_composition.rs  wgsl_layout.rs
crates/ps-atmosphere/: Cargo.toml
crates/ps-atmosphere/src/: lib.rs  lut_overlay.rs  lut_viewer.rs
crates/ps-aurora/: Cargo.toml
crates/ps-aurora/src/: lib.rs
crates/ps-backdrop/: Cargo.toml
crates/ps-backdrop/src/: lib.rs
crates/ps-bloom/: Cargo.toml
crates/ps-bloom/src/: lib.rs
crates/ps-clouds/: Cargo.toml
crates/ps-clouds/src/: lib.rs  noise.rs  params.rs  pipeline.rs
crates/ps-core/: Cargo.toml
crates/ps-core/src/: app.rs  atmosphere_luts.rs  bind_group_cache.rs  bind_groups.rs  camera.rs  config.rs  contexts.rs  frame_uniforms.rs  framebuffer.rs  gpu.rs  hot_reload.rs  lib.rs  pipelined_readback.rs  scene.rs  shaders.rs  shared_scratch.rs  subsystem.rs  time.rs  weather.rs  world.rs
crates/ps-core/src/astro/: mod.rs  moon.rs  spa.rs  tables.rs
crates/ps-core/tests/: app.rs  astro.rs  config.rs  hot_reload.rs  scene.rs  subsystem.rs  uniform_layout.rs
crates/ps-godrays/: Cargo.toml
crates/ps-godrays/src/: lib.rs
crates/ps-ground/: Cargo.toml
crates/ps-ground/src/: lib.rs
crates/ps-imagery/: Cargo.toml
crates/ps-imagery/src/: cache.rs  lib.rs  tile.rs
crates/ps-imagery/src/augment/: mod.rs  passthrough.rs
crates/ps-imagery/src/source/: eox_s2cloudless.rs  mod.rs
crates/ps-imagery/tests/: jpeg_decode.rs
crates/ps-lightning/: Cargo.toml
crates/ps-lightning/src/: bolt.rs  lib.rs  render.rs  rng.rs  strike.rs
crates/ps-postprocess/: Cargo.toml
crates/ps-postprocess/src/: auto_exposure.rs  lib.rs  subsystem.rs  tonemap.rs
crates/ps-precip/: Cargo.toml
crates/ps-precip/src/: lib.rs  uniforms.rs
crates/ps-synthesis/: Cargo.toml
crates/ps-synthesis/src/: cloud_layers.rs  cloud_type_grid.rs  coverage_grid.rs  density_mask.rs  koschmieder.rs  lib.rs  ndf.rs  state.rs  weather_map.rs  wind_field.rs
crates/ps-synthesis/tests/: synthesis.rs
crates/ps-terrain/: Cargo.toml
crates/ps-terrain/src/: cache.rs  lib.rs  mesh.rs  progress.rs  tile.rs
crates/ps-terrain/src/augment/: mod.rs  passthrough.rs  upsample.rs
crates/ps-terrain/src/augment/erosion/: fractal.rs  hydraulic.rs  mod.rs  normal_map.rs  params.rs  runtime.rs  thermal.rs
crates/ps-terrain/src/simplify/: delatin_impl.rs  mod.rs  params.rs  passthrough.rs
crates/ps-terrain/src/source/: copernicus_glo30.rs  mod.rs
crates/ps-terrain/tests/: cog_decode.rs
crates/ps-tint/: Cargo.toml
crates/ps-tint/src/: lib.rs
crates/ps-ui/: Cargo.toml
crates/ps-ui/src/: lib.rs  panels.rs  screenshot.rs  state.rs
crates/ps-water/: Cargo.toml
crates/ps-water/src/: lib.rs
crates/ps-weather-feed/: Cargo.toml
crates/ps-weather-feed/src/: cache.rs  geocoding.rs  kp_index.rs  lib.rs  mapping.rs  metar.rs  open_meteo.rs  ovation.rs
crates/ps-windsock/: Cargo.toml
crates/ps-windsock/src/: lib.rs
docs/: cloud_calibration.md  code_review_2026-05-14.md  code_review_2026-05-14_followup.md  maxime_heckel_comparison.md  pedalback_terrain_pipeline_spec.md  phase12_scope.md  phase13_scope.md
scenes/: broken_cumulus_afternoon.toml
shaders/atmosphere/: aerialperspective.comp.wgsl  lut_overlay.wgsl  lut_viewer.wgsl  multiscatter.comp.wgsl  sky.wgsl  skyview.comp.wgsl  transmittance.comp.wgsl
shaders/aurora/: curtain.wgsl
shaders/bloom/: bright_pass.wgsl  composite.wgsl  downsample.wgsl  upsample.wgsl
shaders/clouds/: cloud_composite.wgsl  cloud_composite_halfres.wgsl  cloud_density_common.wgsl  cloud_march.wgsl  cloud_taa.wgsl  cloud_uniforms.wgsl  noise_base.comp.wgsl  noise_curl.comp.wgsl  noise_detail.comp.wgsl
shaders/common/: atmosphere.wgsl  atmosphere_lut_sampling.wgsl  math.wgsl  uniforms.wgsl
shaders/debug/: probe_transmittance.comp.wgsl
shaders/godrays/: composite.wgsl  radial.wgsl
shaders/ground/: checker.wgsl  pbr.wgsl
shaders/lightning/: bolt.wgsl
shaders/postprocess/: auto_exposure.comp.wgsl  tonemap.wgsl
shaders/precip/: far_rain.wgsl  particle_advance.comp.wgsl  particle_render.wgsl
shaders/terrain/: fractal.wgsl  hydraulic.wgsl  normal_map.wgsl  thermal.wgsl
shaders/tint/: multiply.wgsl
shaders/water/: water.wgsl
shaders/windsock/: windsock.wgsl
tests/golden/: README.md
tests/scenes/: aurora_borealis.toml  broken_cumulus_afternoon.toml  clear_summer_noon.toml  cumulus_meets_stratus.toml  diag_aurora_real.toml  diag_diurnal.toml  diag_godrays.toml  diag_lightning.toml  diag_materials.toml  diag_rain_on.toml  diag_rain_zero_to_high.toml  diag_thermal_advection.toml  diag_water.toml  diag_winds_aloft.toml  hail_storm.toml  high_cirrus_sunset.toml  mountain_wave_clouds.toml  overcast_drizzle.toml  thunderstorm.toml  twilight_civil.toml  winter_overcast_snow.toml
