[package]
name = "ps-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky main binary: winit window, render loop, subsystem registration"

[[bin]]
name = "ps-app"
path = "src/main.rs"

[dependencies]
ps-core.workspace        = true
ps-postprocess.workspace = true
ps-ground.workspace      = true
ps-atmosphere.workspace  = true
ps-clouds.workspace      = true
ps-precip.workspace      = true
ps-synthesis.workspace   = true
ps-backdrop.workspace    = true
ps-tint.workspace        = true
ps-ui.workspace          = true
toml.workspace           = true

wgpu.workspace      = true
winit.workspace     = true
pollster.workspace  = true

glam.workspace      = true
bytemuck.workspace  = true
chrono.workspace    = true

anyhow.workspace    = true
tracing.workspace             = true
tracing-subscriber.workspace  = true
half.workspace      = true
image.workspace     = true
serde.workspace     = true
serde_json.workspace = true
