[package]
name = "ps-backdrop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky Phase 1 demo subsystem: clears the HDR target to a configurable solid colour"

[dependencies]
ps-core.workspace = true
wgpu.workspace    = true
anyhow.workspace  = true
tracing.workspace = true
