[package]
name = "ps-bloom"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky Phase 13.3: HDR bloom (bright-pass + Gaussian pyramid + additive composite)"

[dependencies]
ps-core.workspace   = true
wgpu.workspace      = true
glam.workspace      = true
bytemuck.workspace  = true
anyhow.workspace    = true
tracing.workspace   = true
