[package]
name = "ps-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky core: GPU primitives, configuration, subsystem trait, frame uniforms"

[dependencies]
wgpu.workspace      = true
winit.workspace     = true
pollster.workspace  = true

glam.workspace      = true
bytemuck.workspace  = true
half.workspace      = true

serde.workspace     = true
toml.workspace      = true
chrono.workspace    = true

crossbeam-channel.workspace = true
notify.workspace            = true

thiserror.workspace = true
anyhow.workspace    = true
tracing.workspace   = true

[dev-dependencies]
tempfile = "3"
naga = { version = "29", features = ["wgsl-in"] }
