[package]
name = "ps-imagery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky satellite imagery ingestion: EOX s2cloudless -> RgbTile -> ground overlay"

[dependencies]
ps-core.workspace   = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
ureq.workspace      = true
image.workspace     = true
bytemuck.workspace  = true

[dev-dependencies]
tempfile = "3"
