[package]
name = "ps-lightning"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky Phase 12.3: stochastic lightning bolts + cloud illumination"

[dependencies]
ps-core.workspace   = true
wgpu.workspace      = true
glam.workspace      = true
bytemuck.workspace  = true
anyhow.workspace    = true
tracing.workspace   = true
