[package]
name = "ps-postprocess"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky post-process: tone mapping (ACES Filmic / passthrough), exposure"

[dependencies]
ps-core.workspace = true
wgpu.workspace    = true
bytemuck.workspace = true
tracing.workspace = true
