[package]
name = "ps-terrain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky terrain ingestion: Copernicus DEM -> heightmap -> mesh"

[dependencies]
ps-core.workspace   = true
glam.workspace      = true
bytemuck.workspace  = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
chrono.workspace    = true
ureq.workspace      = true
tiff.workspace      = true

[dev-dependencies]
tempfile = "3"
