[package]
name = "ps-terrain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky terrain ingestion: Copernicus DEM -> heightmap -> mesh"

[dependencies]
ps-core.workspace   = true
glam.workspace      = true
bytemuck.workspace  = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
chrono.workspace    = true
ureq.workspace      = true
tiff.workspace      = true
wgpu.workspace      = true
pollster.workspace  = true
# Section 2 — Garland-Heckbert mesh decimation. Pure-Rust port of
# Mapbox's delatin (originally Fogleman's hmm).
delatin             = "0.2"

[dev-dependencies]
tempfile = "3"
