[package]
name = "ps-tint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky Phase 1 demo subsystem: fullscreen RGB multiply"

[dependencies]
ps-core.workspace  = true
wgpu.workspace     = true
bytemuck.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
