[package]
name = "ps-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky UI overlay (Phase 10: egui)"

[dependencies]
ps-core.workspace      = true
wgpu.workspace         = true
winit.workspace        = true
glam.workspace         = true
chrono.workspace       = true
anyhow.workspace       = true
tracing.workspace      = true
bytemuck.workspace     = true
half.workspace         = true
serde.workspace        = true
toml.workspace         = true
image.workspace        = true
egui.workspace         = true
egui-wgpu.workspace    = true
egui-winit.workspace   = true
exr.workspace          = true
