[package]
name = "ps-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "PedalSky UI overlay (Phase 10: egui)"

[dependencies]
ps-core.workspace      = true
wgpu.workspace         = true
winit.workspace        = true
glam.workspace         = true
chrono.workspace       = true
anyhow.workspace       = true
tracing.workspace      = true
bytemuck.workspace     = true
half.workspace         = true
serde.workspace        = true
toml.workspace         = true
image.workspace        = true
egui.workspace         = true
egui-wgpu.workspace    = true
egui-winit.workspace   = true
exr.workspace          = true
# Native file-open/save dialogs for the top bar's Load scene… /
# Save scene… buttons. `rfd` is widely used and bundles its own
# platform integration (Win32 IFileDialog on Windows, GTK/Zenity on
# Linux, AppKit on macOS). Plan §10.4 requires these buttons to
# work; without rfd they were stubs returning hardcoded paths.
rfd = "0.17"
